# collabulary

app/: .prettierrc.js  package-lock.json  package.json  rollup.config.js
app/i18n/: en-US.json  zh-CN.json
app/public/: global.css
app/src/: App.svelte  Card.svelte  NextRound.svelte  Round.svelte  Scorer.svelte  i18n.ts  language.ts
server/: .rustfmt.toml  Cargo.toml
server/src/: game.rs  main.rs  server.rs  vocab.rs
vocab/: SUBTLEX_CH_131210_CE.utf8.bz2  pinyin.txt.bz2  vocab.tsv
vocab/chinese/: vocab.ipynb  vocab.tsv  vocab_example.tsv
vocab/english/: package-lock.json  package.json  postprocess_translations.py  scrape_google.js  translations.tar.bz2  translations_zh_alts.jsonl  vocab.tsv  words.txt
