[package]
name = "dongzhilin-vocab-practice"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
csv = "1.1.6"
futures-util = "0.3.15"
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "1.9.1"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros", "parking_lot", "sync"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
warp = { version = "0.3.1", default-features = false, features = ["websocket"] }

[profile.release]
lto = true
panic = "abort"
